--- a/package.json
+++ b/package.json
@@ -13,11 +13,9 @@
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.43.9"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "jest": "^29.5.0",
-    "sass": "^1.60.0"
+    "jest": "^29.5.0"
   }
 }
