--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "sass": "^1.62.0",
+    "styled-components": "^5.3.10",
     "yup": "^1.1.0"
   },
   "devDependencies": {
