--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-toastify": "^9.1.2",
     "sass": "^1.62.0",
     "styled-components": "^5.3.10",
     "yup": "^1.1.0"
