--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^3.0.1",
     "axios": "^1.3.6",
     "cookies-next": "^2.1.1",
+    "date-fns": "^2.30.0",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.12.7",
