--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.12.7",
+    "install": "^0.13.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
