--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.6.1",
-    "@emotion/react": "^11.10.8",
-    "@emotion/styled": "^11.10.8",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.0.1",
+    "@mui/material": "^5.13.3",
     "axios": "^1.3.6",
     "cookies-next": "^2.1.1",
     "date-fns": "^2.30.0",
