--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^3.0.1",
     "@mui/material": "^5.13.3",
     "axios": "^1.3.6",
+    "better-react-carousel": "^1.1.1",
     "cookies-next": "^2.1.1",
     "date-fns": "^2.30.0",
     "eslint": "8.37.0",
