build: :arrow_up: upando dependencias

--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "better-react-carousel": "^1.1.1",
     "cookies-next": "^2.1.2",
     "date-fns": "^2.30.0",
-    "eslint": "8.37.0",
-    "eslint-config-next": "13.2.4",
+    "eslint": "^8.43.0",
+    "eslint-config-next": "^13.4.7",
     "formik": "^2.4.2",
     "framer-motion": "^10.12.16",
     "install": "^0.13.0",
     "lucide-react": "^0.221.0",
-    "next": "13.2.4",
+    "next": "^13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.0",
