--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-modal": "^3.16.1",
     "react-toastify": "^9.1.3",
     "styled-components": "^5.3.11",
+    "swiper": "^10.0.4",
     "yup": "^1.2.0"
   },
   "devDependencies": {
