chore: instalação biblioteca react-fast-marquee

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "^13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-fast-marquee": "^1.6.0",
     "react-hook-form": "^7.45.0",
     "react-modal": "^3.16.1",
     "react-toastify": "^9.1.3",
