--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.1.1",
     "@mui/material": "^5.14.1",
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@types/swiper": "^6.0.0",
     "axios": "^1.4.0",
     "better-react-carousel": "^1.1.1",
     "cookies-next": "^2.1.2",
