--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.1.1",
-    "@mui/material": "^5.14.1",
+    "@mui/material": "^5.14.11",
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@types/react-easy-crop": "^2.0.0",
+    "@types/react-image-crop": "^8.1.3",
     "@types/swiper": "^6.0.0",
     "axios": "^1.4.0",
     "better-react-carousel": "^1.1.1",
@@ -28,8 +30,10 @@
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-easy-crop": "^5.0.2",
     "react-fast-marquee": "^1.6.0",
     "react-hook-form": "^7.45.2",
+    "react-image-crop": "^10.1.8",
     "react-modal": "^3.16.1",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.0.5",
