--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.1.1",
+    "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.11",
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
@@ -26,7 +27,6 @@
     "eslint-config-next": "13.4.12",
     "formik": "^2.4.2",
     "framer-motion": "^10.13.0",
-    "lucide-react": "^0.263.1",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
