feat: custom calendar input; fix: styled components theme types

--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@hookform/resolvers": "^3.1.1",
     "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.11",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-toggle": "^1.0.3",
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
@@ -23,6 +27,7 @@
     "better-react-carousel": "^1.1.1",
     "cookies-next": "^2.1.2",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "formik": "^2.4.2",
