--- a/package.json
+++ b/package.json
@@ -7,6 +7,15 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "devDependencies": {
+    "@types/node": "20.4.4",
+    "@types/react": "18.2.15",
+    "@types/react-dom": "18.2.7",
+    "@types/react-easy-crop": "^2.0.0",
+    "@types/react-image-crop": "^8.1.3",
+    "@types/swiper": "^6.0.0",
+    "typescript": "5.1.6"
+  },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -18,18 +27,11 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-toggle": "^1.0.3",
-    "@types/node": "20.4.4",
-    "@types/react": "18.2.15",
-    "@types/react-dom": "18.2.7",
-    "@types/react-easy-crop": "^2.0.0",
-    "@types/react-image-crop": "^8.1.3",
-    "@types/swiper": "^6.0.0",
     "axios": "^1.4.0",
     "better-react-carousel": "^1.1.1",
     "cookies-next": "^2.1.2",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
-    "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "formik": "^2.4.2",
     "framer-motion": "^10.13.0",
@@ -45,7 +47,6 @@
     "react-toastify": "^9.1.3",
     "styled-components": "^6.0.5",
     "swiper": "^10.0.4",
-    "typescript": "5.1.6",
     "yup": "^1.2.0"
   }
 }
