--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,30 +1,6 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": [
-        "xo",
-        "plugin:react/recommended"
-    ],
-    "overrides": [
-        {
-            "extends": [
-                "xo-typescript"
-            ],
-            "files": [
-                "*.ts",
-                "*.tsx"
-            ]
-        }
-    ],
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react"
-    ],
-    "rules": {
-    }
+  "extends": [
+    "next/core-web-vitals",
+		"@rocketseat/eslint-config/next"
+  ]
 }
