--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "lint": "next lint"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.1.0",
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "@types/react-easy-crop": "^2.0.0",
     "@types/react-image-crop": "^8.1.3",
     "@types/swiper": "^6.0.0",
+    "eslint": "^8.54.0",
     "typescript": "5.1.6"
   },
   "dependencies": {
