--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-toggle": "^1.0.3",
+    "@tanstack/react-query": "^5.17.15",
     "axios": "^1.4.0",
     "cookies-next": "^2.1.2",
     "dayjs": "^1.11.10",
