feat: new onboarding and mentors sectionsstyles

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
 		"@rocketseat/eslint-config/next"
   ],
   "rules": {
-    "no-unused-vars": "off"
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-explicit-any": "off"
   }
 }
