--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "formik": "^2.4.2",
     "framer-motion": "^10.13.0",
     "next": "13.4.12",
+    "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-easy-crop": "^5.0.2",
-    "react-fast-marquee": "^1.6.0",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.0.5",
     "swiper": "^10.0.4",
