--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "typescript": "5.1.6"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.1.1",
     "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.11",
