--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@types/react-easy-crop": "^2.0.0",
     "@types/swiper": "^6.0.0",
     "eslint": "^8.54.0",
-    "typescript": "5.1.6",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "3.2.5"
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "prettier": "3.2.5",
+    "typescript": "5.1.6"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
