--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@hookform/resolvers": "^3.1.1",
     "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.11",
+    "@nestjs/axios": "^3.0.3",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
